docs(project): record pagination review fix